@@ -1,19 +1,18 @@
 % STK_OPTIM_FMINSEARCH constructs an object of class 'stk_optim_fminsearch'.
 %
-% CALL: X = stk_optim_fminsearch()
+% CALL: ALGO = stk_optim_fminsearch ()
 %
-%   constructs an object of class 'stk_optim_fminsearch' with a default set of
-%   options.
+%   constructs an algorithm object ALGO of class 'stk_optim_fminsearch'
+%   with a default set of options.
 %
-% CALL: X = stk_optim_fminsearch(opt)
+% CALL: X = stk_optim_fminsearch (opt)
 %
-%   constructs an object of class 'stk_optim_fminsearch' with a user-defined
-%   set of options, defined by the structure opt.
+%   constructs an algorithm object ALGO of class 'stk_optim_fminsearch'
+%   with a user-defined set of options, defined by the structure opt.
 
-%
 % Copyright Notice
 %
-%    Copyright (C) 2015 CentraleSupelec
+%    Copyright (C) 2015, 2016 CentraleSupelec
 %    Copyright (C) 2014 SUPELEC & A. Ravisankar
 %
 %    Authors:  Julien Bect        <julien.bect@centralesupelec.fr>
@@ -39,7 +38,7 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function x = stk_optim_fminsearch (opt)
+function algo = stk_optim_fminsearch (opt)
 
 if nargin > 1
     stk_error ('Too many input arguments.', 'TooManyInputArgs');
@@ -54,7 +53,7 @@ if nargin == 0
         'TolX',         1e-6    );
 end
 
-x = struct ('options', opt);
-x = class (x, 'stk_optim_fminsearch');
+algo = struct ('options', opt);
+algo = class (algo, 'stk_optim_fminsearch');
 
 end % function
